[tool.poetry]
name = "test"
version = "0.1.0"
description = "A Flask-based REST API for managing sums"
authors = ["d perry <dperry713@github.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
